# openMP

./: Abase2Inv.txt  All3levelmatrixML.m  CMakeLists.txt  SerialPiProgram.c  TT.txt  chooseBase.m  clearn.c  diffAll.mat  generateUandV.m  hadizadehImpl.c  helloWorld.c  loadData.m  matrix.c  matrix_mul_openmp.c  modifiedSmw.c  modifiedSmwOpt.c  my_smi.m  my_smi2.m  my_smi3.m  my_test.m  my_test2.m  my_test3.m  piProgram.c  piProgramFalseSharingWithCritical.c  piProgramFalseSharingWithPadding.c  shermanMorrisonIteration.m  shermanMorrisonIterationScaler.m  sm.m  smWWD.m  smi.m  smi_random.m  smi_with_pivoting.m  smi_with_splitting.m  smi_with_splitting_random.m  smt.m  smt_new.m  smw.c  smw.mexw64  smwWithWholeD.mexw64  switchNodeMat.txt  (+8 more)
cFiles/: arrayProduct.c  matrix.c  piProgramFalseSharingWithCritical.c  piProgramWithForAndReduction.c  piProgramWithPragma.c  smwWithWholeD.c
smw18switch/: Abase1.txt  Abase2.txt  Abase2Inv.txt  TT.txt  modifiedSmwOpt18Switch.c
smw6switch/: Abase1.txt  Abase2.txt
threeLevel/: Abase1Inv.txt  TT.txt  modifiedSmwOpt18Switch.c  switchNodeMat.mat  switchNodeMat.txt  threeLevelMatrix.m
twoLevel/: Abase1Inv.txt  modifiedSmwOpt6Switch.c  switchNodeMat.mat  twoLevelMatrix.m
